# cocogitto

./: .gitattributes  .gitignore  .gitmodules  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Cargo.w.toml  LICENSE  README.md  coco.toml  codecov.yaml  cog.toml  index.html  justfile  schema.json
crates/cocogitto/: CHANGELOG.md  Cargo.toml
crates/cocogitto-changelog/: Cargo.toml
crates/cocogitto-changelog/src/: lib.rs  release.rs  renderer.rs  serde.rs  template.rs
crates/cocogitto-commit/: Cargo.toml
crates/cocogitto-commit/src/: lib.rs
crates/cocogitto-config/: Cargo.toml
crates/cocogitto-config/src/: changelog.rs  commit.rs  git_hook.rs  lib.rs  monorepo.rs
crates/cocogitto-core/: Cargo.toml
crates/cocogitto-core/src/: error.rs  increment.rs  lib.rs  oid.rs  serde.rs  tag.rs
crates/cocogitto-dependency-resolver/: CHANGELOG.md  Cargo.toml
crates/cocogitto-dependency-resolver/example/: maven.rs
crates/cocogitto-dependency-resolver/src/: lib.rs
crates/cocogitto-dependency-resolver/src/resolvers/: cargo.rs  maven.rs  mod.rs  npm.rs
crates/cocogitto-dependency-resolver/tests/: resolver_tests.rs
crates/cocogitto-dependency-resolver/tests/lang/cargo_workspace/: Cargo.toml
crates/cocogitto-dependency-resolver/tests/lang/cargo_workspace/package-a/: Cargo.toml
crates/cocogitto-dependency-resolver/tests/lang/cargo_workspace/package-b/: Cargo.toml
crates/cocogitto-dependency-resolver/tests/lang/cargo_workspace/package-c/: Cargo.toml
crates/cocogitto-dependency-resolver/tests/lang/cargo_workspace/package-d/: Cargo.toml
crates/cocogitto-dependency-resolver/tests/lang/cargo_workspace/package-e/: Cargo.toml
crates/cocogitto-dependency-resolver/tests/lang/maven_modules/: pom.xml
crates/cocogitto-dependency-resolver/tests/lang/maven_modules/package-a/: pom.xml
crates/cocogitto-dependency-resolver/tests/lang/maven_modules/package-b/: pom.xml
crates/cocogitto-dependency-resolver/tests/lang/maven_modules/package-c/: pom.xml
crates/cocogitto-dependency-resolver/tests/lang/maven_modules/package-d/: pom.xml
crates/cocogitto-dependency-resolver/tests/lang/maven_modules/package-e/: pom.xml
crates/cocogitto-dependency-resolver/tests/lang/npm_workspace/: package.json
crates/cocogitto-dependency-resolver/tests/lang/npm_workspace/package-a/: package.json
crates/cocogitto-dependency-resolver/tests/lang/npm_workspace/package-b/: package.json
crates/cocogitto-dependency-resolver/tests/lang/npm_workspace/package-c/: package.json
crates/cocogitto-dependency-resolver/tests/lang/npm_workspace/package-d/: package.json
crates/cocogitto-dependency-resolver/tests/lang/npm_workspace/package-e/: package.json
crates/cocogitto-docgen/: Cargo.toml
crates/cocogitto-docgen/src/: main.rs  markdown.rs  schema.rs
crates/cocogitto-git/: Cargo.toml
crates/cocogitto-git/src/: commit.rs  error.rs  hook.rs  lib.rs
crates/cocogitto-hook/: Cargo.toml
crates/cocogitto-hook/src/: lib.rs
crates/cocogitto-hooks/: Cargo.toml
crates/cocogitto-hooks/src/: error.rs  lib.rs  parser.rs
crates/cocogitto-settings/: Cargo.toml
crates/cocogitto-settings/src/: error.rs  hooks.rs  lib.rs
crates/cocogitto-test-helpers/: Cargo.toml
crates/cocogitto-test-helpers/src/: lib.rs
crates/cocogitto/src/: error.rs  lib.rs  target.rs
crates/cocogitto/src/command/: changelog.rs  check.rs  commit.rs  edit.rs  get_version.rs  git_hooks.rs  init.rs  log.rs  mod.rs  verify.rs
crates/cocogitto/src/command/bump/: mod.rs  monorepo.rs  package.rs  prerelease.rs  standard.rs
crates/cocogitto/src/conventional/: bump.rs  commit.rs  error.rs  mod.rs  version.rs
crates/cocogitto/src/conventional/changelog/: context.rs  mod.rs  release.rs  renderer.rs  serde.rs  template.rs
crates/cocogitto/src/git/: commit.rs  diff.rs  error.rs  hook.rs  mod.rs  monorepo.rs  oid.rs  repository.rs  stash.rs  status.rs  tag.rs
crates/cocogitto/src/git/rev/: cache.rs  filters.rs  mod.rs  revspec.rs  revwalk.rs
crates/cocogitto/src/hook/: error.rs  mod.rs
crates/cocogitto/src/log/: filter.rs
crates/cocogitto/src/settings/: mod.rs
crates/cocogitto/tests/: bump.rs  changelog.rs  cocogitto.rs  helpers.rs  init.rs  log.rs
crates/cocogitto/tests/assets/: privkey.key  sshkey
crates/cocogitto/tests/cog_tests/: bump.rs  changelog.rs  check.rs  commit.rs  get_version.rs  init.rs  mod.rs  resolver_integration_test.rs
crates/cocogitto/tests/lib_tests/: bump.rs  changelog.rs
crates/cog/: Cargo.toml
crates/cog-git-hook/: Cargo.toml
crates/cog-log/: Cargo.toml
crates/cog/src/: commit.rs  lib.rs  main.rs
crates/cog/src/command/: git_hooks.rs  mod.rs
crates/cog/src/command/bump/: mod.rs
crates/cog/src/conventional/: bump.rs  commit.rs
crates/cog/src/conventional/changelog/: release.rs
crates/cog/src/git/: hook.rs  stash.rs  status.rs  tag.rs
crates/cog/src/git/rev/: filters.rs  revspec.rs  revwalk.rs
crates/cog/src/hook/: mod.rs  version_dsl.pest
crates/cog/src/log/: filter.rs
crates/cog/tests/: bump.rs  changelog.rs  check.rs  commit.rs  common.rs  get_version.rs  helpers.rs  init.rs  mod.rs  verify.rs
crates/cog/tests/cog_tests/: bump.rs  changelog.rs  commit.rs  get_version.rs  init.rs  template.md
crates/cog/tests/lib_tests/: bump.rs  init.rs  log.rs  mod.rs
crates/commands/cog-bump/: Cargo.toml
crates/commands/cog-bump/src/: lib.rs  monorepo.rs  package.rs  standard.rs
crates/commands/cog-changelog/: Cargo.toml
crates/commands/cog-changelog/src/: lib.rs
crates/commands/cog-check/: Cargo.toml
crates/commands/cog-check/src/: lib.rs
crates/commands/cog-commit/: Cargo.toml
crates/commands/cog-commit/src/: lib.rs
crates/commands/cog-init/: Cargo.toml
crates/commands/cog-init/src/: lib.rs
crates/libs/cocogitto-bump/: Cargo.toml
crates/libs/cocogitto-bump/src/: error.rs  lib.rs
crates/libs/cocogitto-config/: Cargo.toml
crates/libs/cocogitto-config/src/: commit.rs  error.rs  git_hook.rs  hook.rs  lib.rs  monorepo.rs
crates/libs/cocogitto-test-helpers/: Cargo.toml
crates/libs/cocogitto-test-helpers/src/: lib.rs
(+316 files in other folders)
