[workspace]
members = ["crates/commands/*", "crates/libs/*", "crates/cog"]
resolver = "2"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
cocogitto-config = { path = "crates/libs/cocogitto-config" }
cocogitto-tag = { path = "crates/libs/cocogitto-tag" }
cocogitto-oid = { path = "crates/libs/cocogitto-oid" }
cocogitto-hook = { path = "crates/libs/cocogitto-hook" }
cocogitto-changelog = { path = "crates/libs/cocogitto-changelog" }
cocogitto-commit = { path = "crates/libs/cocogitto-commit" }
cocogitto-git = { path = "crates/libs/cocogitto-git" }
cocogitto-bump = { path = "crates/libs/cocogitto-bump" }
cocogitto-test-helpers = { path = "crates/libs/cocogitto-test-helpers" }
cocogitto-schema = { path = "crates/libs/cocogitto-schema" }
cog-command = { path = "crates/commands/cog-command" }
cog-check = { path = "crates/commands/cog-check" }
cog-commit = { path = "crates/commands/cog-commit" }
cog-edit = { path = "crates/commands/cog-edit" }
cog-get-version = { path = "crates/commands/cog-get-version" }
cog-git-hook = { path = "crates/commands/cog-git-hook" }
cog-init = { path = "crates/commands/cog-init" }
cog-log = { path = "crates/commands/cog-log" }
cog-changelog = { path = "crates/commands/cog-changelog" }
cog-verify = { path = "crates/commands/cog-verify" }
cog-bump = { path = "crates/commands/cog-bump" }

semver = "1.0.23"
colored = "^2"
toml = "0.5.11"
edit = "^0"
stderrlog = "0.6.0"
itertools = "^0"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
serde = { version = "^1", features = ["derive"] }
conventional_commit_parser = "0.9.4"
once_cell = "^1"
log = "0.4.21"
anyhow = "1.0.75"
chrono = { version = "0.4.35", features = ["serde"] }
tempfile = "^3"
globset = "0.4.14"
tera = "1.19.1"
shell-words = "^1"
which = "6.0.0"
# Gix
git2 = { version = "0.18.2", default-features = false, features = [] }
gix-discover = "0.31.0"

# Testing
assert_cmd = "2.0"
predicates = "3.1.0"
rand = "0.8.5"
indoc = "2.0.4"
speculoos = "0.11.0"
pretty_assertions = "1.4.0"
sealed_test = "1.0.0"
cmd_lib = "1.9.3"
cargo_metadata = "0.18.1"
pest = "2.7"
pest_derive = "2.7"
