[package]
name = "cocogitto"
version = "6.2.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cocogitto/cocogitto"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "conventional-commit", "changelog", "semver"]
description = """
Cocogitto is a set of cli tools for the conventional commit
and semver specifications.
"""

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
git2 = { version = "0.18.2", default-features = false, features = [] }
# Do not bump anyhow, (see: https://github.com/dtolnay/anyhow/issues/353)
anyhow = "1.0.75"
colored = "^2"
chrono = { version = "0.4.35", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
edit = "^0"
itertools = "^0"
serde = { version = "^1", features = ["derive"] }
tempfile = "^3"
semver = "^1"
shell-words = "^1"
which = "6.0.0"
once_cell = "^1"
# Don't bump yet (see https://github.com/cocogitto/cocogitto/issues/337)
toml = "0.5.11"
clap = { version = "4.5.2", optional = true, features = ["derive", "string"] }
clap_complete = { version = "4.5.1", optional = true }
clap_mangen = { version = "0.2.20", optional = true }
clap_complete_nushell = { version = "4.5.1", optional = true }
conventional_commit_parser = "0.9.4"
pest = "2.7"
pest_derive = "2.7"
tera = "1.19.1"
globset = "0.4.14"
log = "0.4.21"
stderrlog = "0.6.0"
trustfall = { version = "0.8.0", optional = true }
trustfall_rustdoc = { version = "0.17.0", optional = true }
schemars = { version = "1.0.0-alpha.15", features = ["enumset1", "indexmap2"], optional = true }
serde_json = { version = "1.0.132", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.0"
rand = "0.8.5"
indoc = "2.0.4"
speculoos = "0.11.0"
pretty_assertions = "1.4.0"
sealed_test = "1.0.0"
cmd_lib = "1.9.3"

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "clap_mangen", "clap_complete_nushell"]
docgen = ["clap", "schemars", "serde_json", "trustfall", "trustfall_rustdoc"]

[lib]
name = "cocogitto"
path = "src/lib.rs"

[[bin]]
name = "cog"
required-features = ["clap", "clap_complete", "clap_mangen"]

[[bin]]
name = "cog-doc"
required-features = ["docgen"]

[[test]]
name = "all"
path = "tests/common.rs"
