[workspace]
members = [ "crates/*" ]
resolver = "2"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.package]
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
rust-version = "1.78.0"

[workspace.dependencies]
cocogitto-settings = { path = "crates/cocogitto-settings", version = "0.1.0" }
cocogitto-test-helpers = { path = "crates/cocogitto-test-helpers", version = "0.1.0" }
cocogitto-dependency-resolver = { path = "crates/cocogitto-dependency-resolver", version = "0.1.0" }

git2 = { version = "0.20.0", default-features = false, features = [] }
anyhow = "1.0.75"
colored = "^2"
chrono = { version = "0.4.35", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
edit = { version = "0.1.5", features = ["quoted-env"] }
itertools = "^0"
serde = { version = "1", features = ["derive"] }
tempfile = "^3"
semver = "^1"
shell-words = "^1"
which = "6.0.0"
once_cell = "^1"
toml = "0.8.20"
clap = { version = "4.5.2", features = ["derive", "string"] }
clap_complete = { version = "4.5.1" }
clap_mangen = { version = "0.2.20" }
clap_complete_nushell = { version = "4.5.1" }
conventional_commit_parser = "0.9.4"
pest = "2.7"
pest_derive = "2.7"
tera = "1.19.1"
globset = "0.4.14"
log = "0.4.21"
stderrlog = "0.6.0"
cog_schemars = { version = "0.1.0" }
serde_json = { version = "1.0.132" }
maplit = "1.0.2"
indexmap = { version = "2.11.4", features = ["serde"] }
assert_cmd = "2.1.1"
predicates = "3.1.0"
indoc = "2.0.4"
speculoos = "0.12.0"
pretty_assertions = "1.4.0"
sealed_test = "1.0.0"
cmd_lib = "1.9.3"
cargo_metadata = "0.19.2"
petgraph = "0.7.1"
serde-xml-rs = "0.6.0"
