[package]
name = "cocogitto-test-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
git2.workspace = true
cmd_lib.workspace = true
cocogitto.workspace = true
anyhow.workspace = true
cocogitto-config.workspace = true
speculoos.workspace = true
toml.workspace = true

[dev-dependencies]
anyhow.workspace = true
sealed_test.workspace = true
cocogitto-test-helpers.workspace = true
