[package]
name = "cocogitto"
version = "6.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cocogitto/cocogitto"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "conventional-commit", "changelog", "semver"]
description = """
Cocogitto is a set of cli tools for the conventional commit
and semver specifications.
"""


[dependencies]
cocogitto-config.workspace = true
cocogitto-tag.workspace = true
cocogitto-hook.workspace = true
cocogitto-oid.workspace = true
cocogitto-commit.workspace = true
cocogitto-git.workspace = true
git2 = { version = "0.18.2", default-features = false, features = [] }
# Do not bump anyhow, (see: https://github.com/dtolnay/anyhow/issues/353)
anyhow.workspace = true
colored.workspace = true
chrono.workspace = true
tempfile.workspace = true
globset.workspace = true
serde = { version = "^1", features = ["derive"] }
semver = "^1"
shell-words = "^1"
which = "6.0.0"
once_cell = "^1"
# Don't bump yet (see https://github.com/cocogitto/cocogitto/issues/337)
toml.workspace = true
tera = "1.19.1"
log = "0.4.21"
itertools.workspace = true

[dev-dependencies]
cocogitto-test-helpers.workspace = true
assert_cmd = "2.0"
predicates = "3.1.0"
rand = "0.8.5"
indoc = "2.0.4"
speculoos = "0.11.0"
pretty_assertions = "1.4.0"
sealed_test = "1.0.0"
cmd_lib = "1.9.3"
