[package]
name = "cocogitto"
version = "6.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cocogitto/cocogitto"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "conventional-commit", "changelog", "semver"]
description = """
Cocogitto is a set of cli tools for the conventional commit
and semver specifications.
"""


[dependencies]
cocogitto-config.workspace = true
cocogitto-tag.workspace = true
cocogitto-hook.workspace = true
cocogitto-oid.workspace = true
cocogitto-commit.workspace = true
cocogitto-git.workspace = true
cocogitto-changelog.workspace = true
cocogitto-bump.workspace = true
git2.workspace = true
# Do not bump anyhow, (see: https://github.com/dtolnay/anyhow/issues/353)
anyhow.workspace = true
colored.workspace = true
chrono.workspace = true
tempfile.workspace = true
globset.workspace = true
# Don't bump yet (see https://github.com/cocogitto/cocogitto/issues/337)
toml.workspace = true
itertools.workspace = true
tera.workspace = true
semver.workspace = true
shell-words.workspace = true
which.workspace = true
log.workspace = true



[dev-dependencies]
cocogitto-test-helpers.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
rand.workspace = true
indoc.workspace = true
speculoos.workspace = true
pretty_assertions.workspace = true
sealed_test.workspace = true
cmd_lib.workspace = true
