[package]
name = "cocogitto"
version = "7.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/cocogitto/cocogitto"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "conventional-commit", "changelog", "semver"]
description = """
Cocogitto is a set of cli tools for the conventional commit
and semver specifications.
"""

[dependencies]
cocogitto-hooks.workspace = true
cocogitto-core.workspace = true
cocogitto-settings.workspace = true
git2.workspace = true
anyhow.workspace = true
colored.workspace = true
chrono.workspace = true
edit.workspace = true
itertools.workspace = true
serde.workspace = true
tempfile.workspace = true
semver.workspace = true
shell-words.workspace = true
which.workspace = true
once_cell.workspace = true
toml.workspace = true
clap = { workspace =  true, optional = true }
clap_complete = { workspace =  true, optional = true }
clap_mangen = { workspace =  true, optional = true }
clap_complete_nushell = { workspace =  true, optional = true }
conventional_commit_parser.workspace = true
tera.workspace = true
globset.workspace = true
log.workspace = true
stderrlog.workspace = true
serde_json = { workspace =  true, optional = true }
cocogitto-dependency-resolver.workspace = true

[dev-dependencies]
cocogitto-test-helpers.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
indoc.workspace = true
speculoos.workspace = true
pretty_assertions.workspace = true
sealed_test.workspace = true
cmd_lib.workspace = true
serde_json.workspace = true

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "clap_mangen", "clap_complete_nushell"]

[lib]
name = "cocogitto"
path = "src/lib.rs"

[[bin]]
name = "cog"
required-features = ["clap", "clap_complete", "clap_mangen"]

[[test]]
name = "all"
path = "tests/common.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
