[package]
name = "cog-git-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
cocogitto.workspace = true
cocogitto-git.workspace = true
anyhow.workspace = true

[dev-dependencies]
cocogitto-test-helpers.workspace = true
sealed_test.workspace = true
cmd_lib.workspace = true
speculoos.workspace = true
toml.workspace = true