[package]
name = "cog"
version = "0.1.0"
edition = "2021"

[dependencies]
cocogitto.workspace = true
cocogitto-config.workspace = true
conventional_commit_parser.workspace = true
itertools.workspace = true
anyhow.workspace = true
edit.workspace = true
stderrlog.workspace = true
clap = { version = "4.5.2", features = ["derive", "string"] }
clap_complete = { version = "4.5.1" }
clap_mangen = { version = "0.2.20" }
clap_complete_nushell = { version = "4.5.1" }

[dev-dependencies]
cocogitto-test-helpers.workspace = true
assert_cmd = "2.0"
predicates = "3.1.0"
rand = "0.8.5"
indoc = "2.0.4"
speculoos = "0.11.0"
pretty_assertions = "1.4.0"
sealed_test = "1.0.0"
cmd_lib = "1.9.3"
cargo_metadata.workspace = true
chrono.workspace = true
toml.workspace = true
