[package]
name = "cog"
version = "6.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cocogitto/cocogitto"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "conventional-commit", "changelog", "semver"]
description = """
Cocogitto is a set of cli tools for the conventional commit
and semver specifications.
"""

[dependencies]
cog-command.workspace = true
cocogitto-config.workspace = true
cog-check.workspace = true
cog-commit.workspace = true
cog-edit.workspace = true
cog-get-version.workspace = true
cog-git-hook.workspace = true
cog-init.workspace = true
cog-log.workspace = true
cog-changelog.workspace = true
cog-verify.workspace = true
cog-bump.workspace = true
anyhow.workspace = true
stderrlog.workspace = true
clap = { version = "4.5.2", features = ["derive", "string"] }
clap_complete = { version = "4.5.1" }
clap_mangen = { version = "0.2.20" }
clap_complete_nushell = { version = "4.5.1" }

[dev-dependencies]
cocogitto-test-helpers.workspace = true
assert_cmd = "2.0"
predicates = "3.1.0"
rand = "0.8.5"
indoc = "2.0.4"
speculoos = "0.11.0"
pretty_assertions = "1.4.0"
sealed_test = "1.0.0"
cmd_lib = "1.9.3"
cargo_metadata.workspace = true
chrono.workspace = true
toml.workspace = true
