[package]
name = "cog-changelog"
version = "0.1.0"
edition = "2021"

[dependencies]
cocogitto.workspace = true
cocogitto-changelog.workspace = true
anyhow.workspace = true

[dev-dependencies]
cocogitto-test-helpers.workspace = true
sealed_test.workspace = true
speculoos.workspace = true
cmd_lib.workspace = true
